kubernetes-manifests/02-lb-exporter-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lb-exporter
  namespace: monitoring
  labels:
    app: lb-exporter
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lb-exporter
  template:
    metadata:
      labels:
        app: lb-exporter
    spec:
      containers:
        - name: lb-exporter
          image: registry.cloud.kt.com/nqtv7l5h/lb-exporter:v1.0.1 # 위에서 푸시한 Docker 이미지
          ports:
            - containerPort: 9105 # lb-exporter.py에 설정된 포트
              name: metrics
      imagePullSecrets:
        - name: ktcloud-registry-secret # kubectl create secret 명령어로 생성했던 secret의 이름
